@@ -2,6 +2,6 @@ top_builddir=../../..
 include $(top_builddir)/Makefile.config
 INCLUDES += $(SPIDERMONKEY_CFLAGS)
 
-OBJS = document.o form.o location.o navigator.o unibar.o window.o
+OBJS = document.o form.o location.o navigator.o unibar.o util.o window.o
 
 include $(top_srcdir)/Makefile.lib
